--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@ window.onload = function() {
 
 <body>
 	<!--TopBar-->
-	<TopBar> <img src="/Icons/side-bar-line.png" alt="SideBar" onclick="openNav()" class="Fixed">
+	<TopBar> 
+		<img src="/Icons/side-bar-line.png" alt="SideBar" onclick="openNav()" class="Fixed">
+		<img src="/Icons/side-bar-line.png" alt="SideBar" onclick="openNav()">
+		
 		<a href="https://github.com/Apexofacircle"> <img src="/Icons/github-line.png" alt="Github"> </a>
 		<a href="https://www.instagram.com/vanadis_photo/"> <img src="/Icons/instagram-line.png" alt="Instagram"> </a>
 	</TopBar>
