--- a/Photo.html
+++ b/Photo.html
@@ -5,8 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="PhotoGrid_style.css">
 </head>
+<script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "15%";
+        document.getElementById("main").style.marginLeft = "10%";
+    }
+    
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("main").style.marginLeft = "0";
+    }
+    window.onload = function() {
+        closeNav();
+    }
+    
+    </script>
 <body>
-    PHOTOS HERE!
+
+    <!--TopBar-->
+	<TopBar> 
+		<img src="/Icons/side-bar-line.png" alt="SideBar" onclick="openNav()" class="Fixed">
+		<img src="/Icons/side-bar-line.png" alt="SideBar" onclick="openNav()">
+		
+		<a href="https://github.com/Apexofacircle"> <img src="/Icons/github-line.png" alt="Github"> </a>
+		<a href="https://www.instagram.com/vanadis_photo/"> <img src="/Icons/instagram-line.png" alt="Instagram"> </a>
+	</TopBar>
+
+	<!-- Sidebar -->
+	<SideNav id="mySidenav" class="sidenav">
+		<h1 onclick="closeNav()" class="SideBarClose">X</h1> <img src="/MainPagePhotos/BirdHouse.jpg" alt="Icon" class="TopImage">
+		<a href="#Main" class="HomeButton" onclick="closeNav()"> <img src="/Icons/home-3-line.png" alt="HomeButton"> </a>
+		<a href="#About" class="HomeButton" onclick="closeNav()"> <img src="/Icons/slideshow-line.png" alt="About Button"> </a>
+		<a href="#" class="HomeButton"> <img src="/Icons/code-s-slash-line.png" alt="Landscape"> </a>
+		<a href="/Photo.html" class="HomeButton"> <img src="/Icons/camera-3-line.png" alt="HomeButton"> </a>s
+	</SideNav>
+
+
+    <div class="row">
+        <div class="column">
+            <img src="/GridPhotos/IMG_20220704_230049.jpg">
+            <img src="/GridPhotos/IMG_1878.CR2.jpg">
+            <img src="/GridPhotos/IMG_20220626_092542225.jpg">
+        </div>
+        <div class="column">
+            <img src="/GridPhotos/IMG_1798.JPG">
+            <img src="/GridPhotos/IMG_1918.CR2.jpg">
+            <img src="/MainPagePhotos/PatternsAndRep.jpg">
+            <img src="/MainPagePhotos/Landscape.jpg">
+        </div>
+        <div class="column">
+            <img src="/GridPhotos/IMG_1899.CR2.jpg">
+            <img src="/GridPhotos/IMG_2746.JPG">
+            <img src="/MainPagePhotos/SunsetPerson.JPG">
+
+        </div>
+      </div>
+
 </body>
 </html>
