--- a/Photo.html
+++ b/Photo.html
@@ -28,7 +28,6 @@
 	<TopBar> 
 		<img src="/Icons/side-bar-line.png" alt="SideBar" onclick="openNav()" class="Fixed">
 		<img src="/Icons/side-bar-line.png" alt="SideBar" onclick="openNav()">
-		
 		<a href="https://github.com/Apexofacircle"> <img src="/Icons/github-line.png" alt="Github"> </a>
 		<a href="https://www.instagram.com/vanadis_photo/"> <img src="/Icons/instagram-line.png" alt="Instagram"> </a>
 	</TopBar>
@@ -36,8 +35,8 @@
 	<!-- Sidebar -->
 	<SideNav id="mySidenav" class="sidenav">
 		<h1 onclick="closeNav()" class="SideBarClose">X</h1> <img src="/MainPagePhotos/BirdHouse.jpg" alt="Icon" class="TopImage">
-		<a href="#Main" class="HomeButton" onclick="closeNav()"> <img src="/Icons/home-3-line.png" alt="HomeButton"> </a>
-		<a href="#About" class="HomeButton" onclick="closeNav()"> <img src="/Icons/slideshow-line.png" alt="About Button"> </a>
+		<a href="index.html" class="HomeButton" onclick="closeNav()"> <img src="/Icons/home-3-line.png" alt="HomeButton"> </a>
+		<a href="index.html#About" class="HomeButton" onclick="closeNav()"> <img src="/Icons/slideshow-line.png" alt="About Button"> </a>
 		<a href="#" class="HomeButton"> <img src="/Icons/code-s-slash-line.png" alt="Landscape"> </a>
 		<a href="/Photo.html" class="HomeButton"> <img src="/Icons/camera-3-line.png" alt="HomeButton"> </a>s
 	</SideNav>
