--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@ window.onload = function() {
 	<!-- Sidebar -->
 	<SideNav id="mySidenav" class="sidenav">
 		<h1 onclick="closeNav()" class="SideBarClose">X</h1> <img src="/MainPagePhotos/BirdHouse.jpg" alt="Icon" class="TopImage">
-		<a href="#Main" class="HomeButton" onclick="closeNav()"> <img src="/Icons/home-3-line.png" alt="HomeButton"> </a>
+		<a href="index.html" class="HomeButton" onclick="closeNav()"> <img src="/Icons/home-3-line.png" alt="HomeButton"> </a>
 		<a href="#About" class="HomeButton" onclick="closeNav()"> <img src="/Icons/slideshow-line.png" alt="About Button"> </a>
-		<a href="#" class="HomeButton"> <img src="/Icons/code-s-slash-line.png" alt="Landscape"> </a>
+		<a href="index.html" class="HomeButton"> <img src="/Icons/code-s-slash-line.png" alt="Landscape"> </a>
 		<a href="/Photo.html" class="HomeButton"> <img src="/Icons/camera-3-line.png" alt="HomeButton"> </a>s
 	</SideNav>
 
-    <!-- Top Image Display-->
+    <!-- Top Ima;ge Display-->
 	<div id="main" onclick="closeNav()">
 		<div class="c-heroImageGrid">
 			<div class="container">
@@ -52,8 +52,8 @@ window.onload = function() {
 					<div class="row">
 						<div>
 							<div class="text">
-								<h6> Add A Photo <br> All of my photos in one place </h6>
-								<p> Scroll down for more content V </p>
+								<h6>Photography & Coding</h6>
+								<p> Projects in one place! </p>
 							</div>
 						</div>
 						<div></div>
@@ -68,20 +68,22 @@ window.onload = function() {
 	<!-- PhotoGrid-->
 	<h1 class="HeadderText" id="Main">Latest:</h1>
 	<div class="row">
-		<div class="column"> <img src="/MainPagePhotos/Firework1.jpg" alt="Snow" style="width:100%"> </div>
+		<a href="Photo.html">
+		<div class="column" > <img src="/MainPagePhotos/Firework1.jpg" alt="Snow" style="width:100%"> </div>
 		<div class="column"> <img src="/MainPagePhotos/SunsetPerson.JPG" alt="Forest" style="width:100%"> </div>
 		<div class="column"> <img src="/MainPagePhotos/PatternsAndRep.jpg" alt="Mountains" style="width:100%"> </div>
+	</a>
 	</div>
 
    <!--About-->
 
     <h1 class="HeadderText" id="About">About:</h1>
  
-    <p>I am a software developer dedicated to OpenSource. I built this website to showcase my projects and Photography. <br>
+    <p style="text-align: center;">I am a software developer dedicated to OpenSource. I built this website to showcase my projects and Photography. <br>
     The only parts of this website that are not free to use are the photographs. <br>
     I encourage the use of my code to inspire and teach (and whenever you are too lazy to write it yourself). <br>
     
-    <br> here are some of my stats: <br></p>
+    <br> Here are some of my stats: <br></p>
 
 <!--Stats-->
     <p>HTML</p>
