--- a/Photo.html
+++ b/Photo.html
@@ -37,7 +37,7 @@
 		<h1 onclick="closeNav()" class="SideBarClose">X</h1> <img src="/MainPagePhotos/BirdHouse.jpg" alt="Icon" class="TopImage">
 		<a href="index.html" class="HomeButton" onclick="closeNav()"> <img src="/Icons/home-3-line.png" alt="HomeButton"> </a>
 		<a href="index.html#About" class="HomeButton" onclick="closeNav()"> <img src="/Icons/slideshow-line.png" alt="About Button"> </a>
-		<a href="#" class="HomeButton"> <img src="/Icons/code-s-slash-line.png" alt="Landscape"> </a>
+		<a href="/UnderConstruction.html" class="HomeButton"> <img src="/Icons/code-s-slash-line.png" alt="Landscape"> </a>
 		<a href="/Photo.html" class="HomeButton"> <img src="/Icons/camera-3-line.png" alt="HomeButton"> </a>s
 	</SideNav>
 
@@ -47,17 +47,21 @@
             <img src="/GridPhotos/IMG_20220704_230049.jpg">
             <img src="/GridPhotos/IMG_1878.CR2.jpg">
             <img src="/GridPhotos/IMG_20220626_092542225.jpg">
+            <img src="/GridPhotos/River3.jpg" alt="">
+            <img src="/MainPagePhotos/IMG_2645.JPG" alt="">
         </div>
         <div class="column">
             <img src="/GridPhotos/IMG_1798.JPG">
             <img src="/GridPhotos/IMG_1918.CR2.jpg">
             <img src="/MainPagePhotos/PatternsAndRep.jpg">
             <img src="/MainPagePhotos/Landscape.jpg">
+            <img src="/GridPhotos/River2.jpg" alt="">
         </div>
         <div class="column">
             <img src="/GridPhotos/IMG_1899.CR2.jpg">
             <img src="/GridPhotos/IMG_2746.JPG">
             <img src="/MainPagePhotos/SunsetPerson.JPG">
+            <img src="/GridPhotos/River.jpg" alt="">
 
         </div>
       </div>
