--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ window.onload = function() {
 		<h1 onclick="closeNav()" class="SideBarClose">X</h1> <img src="/MainPagePhotos/BirdHouse.jpg" alt="Icon" class="TopImage">
 		<a href="index.html" class="HomeButton" onclick="closeNav()"> <img src="/Icons/home-3-line.png" alt="HomeButton"> </a>
 		<a href="#About" class="HomeButton" onclick="closeNav()"> <img src="/Icons/slideshow-line.png" alt="About Button"> </a>
-		<a href="index.html" class="HomeButton"> <img src="/Icons/code-s-slash-line.png" alt="Landscape"> </a>
+		<a href="/UnderConstruction.html" class="HomeButton"> <img src="/Icons/code-s-slash-line.png" alt="Landscape"> </a>
 		<a href="/Photo.html" class="HomeButton"> <img src="/Icons/camera-3-line.png" alt="HomeButton"> </a>s
 	</SideNav>
 
