--- a/UnderConstruction.html
+++ b/UnderConstruction.html
@@ -6,39 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UnderConstruction!</title>
 </head>
-<style>
-
-    .wrap {
-    width: 1060px;
-    height:auto;
-    margin: auto;
-    text-align:center;
-    position:relative;
-    width: 100%;
-}
-.text_over_image {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    left:0;
-    right:0;
-    bottom:0;
-    color:#fff;
-    height:50%;
-    width: 100%;
-}
-
-.image{
-    width: 100%;
-    height: 100%;
-}
-</style>
+<script>
+    alert("Sorry, This page is currently underconstruction!")
+    window.location.href = "index.html";
+</script>
 <body>
-    <div class="wrap">
-        <img src="/Resorces/web-design-g1ca406c08_1920.jpg" alt="This page is under construction" class="image">
-        <h1 class="text_over_image">Sorry, This page is Under Construction.</h1>
-        <a href="index.html" class="text_over_image"><h1> <br> GO BACK</h1></a>
-    </div>
-    
 </body>
 </html>
