--- a/Photo.html
+++ b/Photo.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Photography</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/Resorces/Icons/checkbox-multiple-line.png">
   </head>
   <script src="/JavaScript.js"></script>
-  <body>
+  <body id="content">
     <!--TopBar-->
     <TopBar>
       <img src="/Resorces/Icons/side-bar-line.png" alt="SideBar" onclick="openNav()" class="Fixed">
@@ -39,30 +40,29 @@
     <div class="PhotoDisplay">
       <div class="row">
         <div class="column">
-          <img src="/GridPhotos/IMG_20220704_230049.jpg">
-          <img src="/GridPhotos/IMG_1878.CR2.jpg">
-          <img src="/GridPhotos/IMG_20220626_092542225.jpg">
-          <img src="/GridPhotos/River3.jpg" alt="">
-          <img src="/MainPagePhotos/IMG_2645.JPG" alt="">
+          <img src="/Resorces/Photos/Fire1.JPG">
+          <img src="/Resorces/Photos/Fire2.jpg">
+          <img src="/Resorces/Photos/Fire3.jpg">
+          <img src="/Resorces/Photos/Fire4.JPG">
+          <img src="/Resorces/Photos/Fire5.jpg">
         </div>
         <div class="column">
-          <img src="/GridPhotos/IMG_1798.JPG">
-          <img src="/GridPhotos/IMG_1918.CR2.jpg">
-          <img src="/MainPagePhotos/PatternsAndRep.jpg">
-          <img src="/MainPagePhotos/Landscape.jpg">
-          <img src="/GridPhotos/River2.jpg" alt="">
+          <img src="/Resorces/Photos/Firework1.jpg">
+          <img src="/Resorces/Photos/Firework2.JPG">
+          <img src="/Resorces/Photos/Firework3.JPG">
+          <img src="/Resorces/Photos/Firework4.JPG">
+          <img src="/Resorces/Photos/Lake1.jpg">
         </div>
         <div class="column">
-          <img src="/GridPhotos/IMG_1899.CR2.jpg">
-          <img src="/GridPhotos/IMG_2746.JPG">
-          <img src="/MainPagePhotos/SunsetPerson.JPG">
-          <img src="/GridPhotos/River.jpg" alt="">
+          <img src="/Resorces/Photos/PatternsAndRep.jpg">
+          <img src="/Resorces/Photos/River.jpg">
+          <img src="/Resorces/Photos/River2.jpg">
+          <img src="/Resorces/Photos/River3.jpg">
         </div>
         <div class="column">
-          <img src="/GridPhotos/IMG_1899.CR2.jpg">
-          <img src="/GridPhotos/IMG_2746.JPG">
-          <img src="/MainPagePhotos/SunsetPerson.JPG">
-          <img src="/GridPhotos/River.jpg" alt="">
+          <img src="/Resorces/Photos/Sky1.jpg">
+          <img src="/Resorces/Photos/StuffedAnimals1.jpg">
+          <img src="/Resorces/Photos/SunsetPerson.JPG">
         </div>
       </div>
     </div>
