--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/Resorces/Icons/checkbox-multiple-line.png">
   </head>
   <script src="/JavaScript.js"></script>
-  <body>
+  <body id="content">
     <!--TopBar-->
     <TopBar>
       <img src="/Resorces/Icons/side-bar-line.png" alt="SideBar" onclick="openNav()" class="Fixed">
@@ -36,7 +37,7 @@
         <img src="/Resorces/Icons/camera-3-line.png" alt="HomeButton">
       </a>
     </SideNav>
-    <!-- Top Ima;ge Display-->
+    <!-- Top Image Display-->
     <div id="main" onclick="closeNav()">
       <div class="c-heroImageGrid">
         <div class="container">
@@ -46,8 +47,8 @@
             <div class="row">
               <div>
                 <div class="text">
-                  <h6>Photography & Coding</h6>
-                  <p> Projects in one place! </p>
+                  <h6>AllDone.Dev</h6>
+                  <p> A portfolio of photography and programs built from scratch. </p>
                 </div>
               </div>
               <div></div>
@@ -60,7 +61,7 @@
     </div>
     <!-- PhotoGrid-->
     <h1 class="HeadderText" id="Main">Featured Photos:</h1>
-    <div class="row">
+    <div class="row Grid1">
       <a href="Photo.html">
         <div class="column">
           <img src="/Resorces/Photos/River.jpg" alt="River" style="width:100%">
@@ -75,7 +76,7 @@
     </div>
     <!--About-->
     <h1 class="HeadderText" id="About">About:</h1>
-    <p style="text-align: center;">I am a software developer dedicated to OpenSource. I built this website to showcase my projects and Photography. <br> The only parts of this website that are not free to use are the photographs. <br> I encourage the use of my code to inspire and teach (and whenever you are too lazy to write it yourself). <br>
+    <p style="text-align: center;">I am a software developer dedicated to OpenSource. I built this website to showcase my projects and photography. <br> The only parts of this website that are not free to use are the images. <br> I encourage the use of my code to inspire and teach (and whenever you are too lazy to write it yourself). <br>
       <br> Here are some of my stats: <br>
     </p>
     <!--Stats-->
