--- a/UnderConstruction.html
+++ b/UnderConstruction.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UnderConstruction!</title>
+    <link rel="icon" type="image/x-icon" href="/Resorces/Icons/checkbox-multiple-line.png">
 </head>
 <script>
     alert("Sorry, This page is currently underconstruction!")
