--- a/index.html
+++ b/index.html
@@ -4,39 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>index</title>
     <link rel="stylesheet" href="/styles.css">
     <script src="/JS.js"></script>
     
 </head>
-<LSideBar>
-   <div class="tooltip">
-     <a href="index.html">
-        <img src="/SideBar/SideBarResorces/HomeIcon.svg" alt="home button" class="SideIcon tooltip">
-            <span class="tooltiptext">Home</span></a></div>
-   <div class="tooltip">
-     <a href="projects.html">
-        <img src="/SideBar/SideBarResorces/hammer.svg" alt="hammer icon" class="SideIcon">
-            <span class="tooltiptext">Programs</span></a></div>
-   <div class="tooltip">
-     <a href="https://www.instagram.com/vanadis_photo/">
-        <img src="/SideBar/SideBarResorces/instagram.svg" alt="instagram icon" class="SideIcon">
-            <span class="tooltiptext">Instagram</span></a></div>
-   <div class="tooltip">
-     <a href="https://www.instagram.com/vanadis_photo/">
-        <img src="/SideBar/SideBarResorces/github-outline.svg" alt="github icon" class="SideIcon">
-            <span class="tooltiptext">Github</span></a></div>
-   <div class="tooltip">
-    <a href="/News/NewsHomepage.html">
-        <img src="/SideBar/SideBarResorces/book-stack.svg" alt="News icon" class="SideIcon">
-            <span class="tooltiptext">News</span></a></div>
- </LSideBar>
-<body>
-    <header>
-        <img src="/index/IndexResorces/Header.png" alt="" class="header">
-        <h1 class="headertext">The Open Website</h1>
-    </header>
-     <h2 class="textcentered">Secure your security</h2>
 
+<body>
+<P>UNDER CONSTRUCTION!</P>
 </body>
 </html>
