--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-    <link rel="stylesheet" href="/styles.css">
-    <script src="/JS.js"></script>
-    
+    <title>Home</title>
 </head>
+<style>
+    body{
+        background-color: black;
+        color: rgb(188, 206, 206);
+    }
 
+    .PhotographyButton{
+        margin: auto;
+        width: 50%;
+        border: 3px solid green;
+        padding: 10px;
+    }
+
+    .main{
+        height: 100%;
+        width: 100%;
+    }
+</style>
 <body>
-<P>UNDER CONSTRUCTION!</P>
+<div class="main">
+    <div class="PhotographyButton">Photography</div>
+</div>
+
+
 </body>
 </html>
