--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 <header>
+    <div class="LinkIcons">
+        <img src="/Resources/github.svg" alt="Github Logo" style="width: 5%;">
+        <img src="/Resources/instagram.svg" alt="Instagram Logo" style="width: 5%;">
+    </div>
+    <p class="MainText">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 </header>
 <main>
 
