--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="/Resources/github.svg" alt="Github Logo" style="width: 5%;">
         <img src="/Resources/instagram.svg" alt="Instagram Logo" style="width: 5%;">
     </div>
-    <p class="MainText">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <p class="MainText">Ada's applications and photography</p>
 </header>
 <main>
 
