--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <p class="MainText">Lorem ipsum dolor sit amet consectetur.</p>
 </header>
 <main>
-
+   <div class="buttons">
+        <button><p>Photography</p></button>
+        <button><p>Applications</p></button>
+        <button><p>About</p></button>
+   </div>
 </main>
 <footer>
 
