--- a/index.html
+++ b/index.html
@@ -5,25 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<header>
-    <div class="LinkIcons">
-        <img src="/Resources/github.svg" alt="Github Logo" style="width: 5%;">
-        <img src="/Resources/instagram.svg" alt="Instagram Logo" style="width: 5%;">
-    </div>
-    <p class="MainText">Lorem ipsum dolor sit amet consectetur.</p>
-</header>
-<main>
-   <div class="buttons">
-        <button><p>Photography</p></button>
-        <button><p>Applications</p></button>
-        <button><p>About</p></button>
-   </div>
-</main>
-<footer>
-
-</footer>
+    Under construction
 </body>
 </html>
